2023-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/black_scholes.cpp (black_scholes): Renamed function and file,
	extended to take argument, and return a result matrix
	* man/black_scholes.Rd: Idem
        * src/RcppExport.cpp: Idem
        * R/RcppExports.R: Idem

2023-02-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/black_scholes_example.cpp (black_scholes_example): Also compute
	vega via automatic differentiation

	* src/Makevars (CXX_STD): Set CXX_STD to CXX17
	* src/Makevars.win (CXX_STD): Idem

2023-02-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/: Include FastAD version 3.1.0

	* src/black_scholes_example.cpp: Add based on FastAD example
	* man/black_scholes_example.Rd: Generated

        * DESCRIPTION: Generated via kitten() as RcppEigen package
        * NAMESPACE: Idem
        * src/RcppExport.cpp: Idem
        * src/Makevars: Idem
        * src/Makevars.win: Idem
        * R/RcppExports.R: Idem
        * man/RcppFastAD-package.Rd: Idem
	* test/tinytest.R: Idem
        * inst/tinytest/test_RcppFastAD.R: Idem